--- a/app/src/main/res/layout/location_fragment.xml
+++ b/app/src/main/res/layout/location_fragment.xml
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:constraint_referenced_ids="divider0,accuracyFlow,divider1,bearingFlow,divider2,elevationFlow,divider3,speedFlow,updatedAtTextView"
+            app:constraint_referenced_ids="divider1,bearingFlow,divider2,elevationFlow,divider3,speedFlow,updatedAtTextView"
             app:flow_verticalGap="@dimen/location_stat_row_gap_horizontal"
             app:flow_verticalStyle="spread_inside"
             app:flow_wrapMode="none"
@@ -70,54 +70,16 @@
             app:iconGravity="textStart" />
 
         <include
-            android:id="@+id/divider0"
+            android:id="@+id/divider1"
             layout="@layout/divider"
             android:layout_width="match_parent"
             android:layout_height="1dp" />
 
         <androidx.constraintlayout.helper.widget.Flow
-            android:id="@+id/accuracyFlow"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:constraint_referenced_ids="accuracyImageView,accuracyLabelTextView,accuracyValueTextView"
-            app:flow_horizontalGap="@dimen/location_stat_row_gap_horizontal" />
-
-        <ImageView
-            android:id="@+id/accuracyImageView"
-            style="@style/LocationStatIcon"
-            android:layout_width="@dimen/location_stat_row_image_size"
-            android:layout_height="@dimen/location_stat_row_image_size"
-            android:contentDescription="@string/location_label_accuracy"
-            android:src="@drawable/ic_twotone_straighten_24px" />
-
-        <TextView
-            android:id="@+id/accuracyLabelTextView"
-            style="@style/LocationStatLabel"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/location_label_accuracy" />
-
-        <com.elyeproj.loaderviewlibrary.LoaderTextView
-            android:id="@+id/accuracyValueTextView"
-            style="@style/LocationStat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="end"
-            android:minWidth="96dp" />
-
-        <include
-            android:id="@+id/divider1"
-            layout="@layout/divider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            app:layout_constraintBottom_toTopOf="@id/bearingFlow"
-            app:layout_constraintTop_toBottomOf="@id/accuracyFlow" />
-
-        <androidx.constraintlayout.helper.widget.Flow
             android:id="@+id/bearingFlow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:constraint_referenced_ids="bearingImageView,bearingLabelTextView,bearingValueTextView"
+            app:constraint_referenced_ids="bearingImageView,bearingLabelTextView,bearingValueTextView,bearingAccuracyValueTextView"
             app:flow_horizontalGap="@dimen/location_stat_row_gap_horizontal" />
 
         <ImageView
@@ -143,6 +105,14 @@
             android:gravity="end"
             android:minWidth="96dp" />
 
+        <com.elyeproj.loaderviewlibrary.LoaderTextView
+            android:id="@+id/bearingAccuracyValueTextView"
+            style="@style/LocationStatAccuracy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:minWidth="36dp" />
+
         <include
             android:id="@+id/divider2"
             layout="@layout/divider"
@@ -153,7 +123,7 @@
             android:id="@+id/elevationFlow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:constraint_referenced_ids="elevationImageView,elevationLabelTextView,elevationValueTextView"
+            app:constraint_referenced_ids="elevationImageView,elevationLabelTextView,elevationValueTextView,elevationAccuracyValueTextView"
             app:flow_horizontalGap="@dimen/location_stat_row_gap_horizontal" />
 
         <ImageView
@@ -179,6 +149,14 @@
             android:gravity="end"
             android:minWidth="96dp" />
 
+        <com.elyeproj.loaderviewlibrary.LoaderTextView
+            android:id="@+id/elevationAccuracyValueTextView"
+            style="@style/LocationStatAccuracy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:minWidth="36dp" />
+
         <include
             android:id="@+id/divider3"
             layout="@layout/divider"
@@ -189,7 +167,7 @@
             android:id="@+id/speedFlow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:constraint_referenced_ids="speedImageView,speedLabelTextView,speedValueTextView"
+            app:constraint_referenced_ids="speedImageView,speedLabelTextView,speedValueTextView,speedAccuracyValueTextView"
             app:flow_horizontalGap="@dimen/location_stat_row_gap_horizontal" />
 
         <ImageView
@@ -214,6 +192,14 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:minWidth="96dp" />
+
+        <com.elyeproj.loaderviewlibrary.LoaderTextView
+            android:id="@+id/speedAccuracyValueTextView"
+            style="@style/LocationStatAccuracy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:minWidth="36dp" />
 
         <TextView
             android:id="@+id/updatedAtTextView"
