--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -100,15 +100,11 @@
         <item name="height_weight">0.8</item>
     </style>
 
-    <style name="CompassBackground">
-        <item name="android:tint">@color/onSurface</item>
-    </style>
-
     <style name="CompassDegrees" parent="TextAppearance.Positional.Headline5">
+        <item name="android:textStyle">bold</item>
         <item name="autoSizeMaxTextSize">128sp</item>
         <item name="autoSizeTextType">uniform</item>
         <item name="corners">4</item>
-        <item name="height_weight">0.8</item>
     </style>
 
     <!-- Location -->
