--- a/app/src/main/res/layout-land/compass_fragment.xml
+++ b/app/src/main/res/layout-land/compass_fragment.xml
@@ -22,6 +22,7 @@
             app:layout_constraintBottom_toTopOf="@id/accelerometerAccuracyTextView"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_weight="1"
+            app:tint="?attr/colorOnSurface"
             tools:ignore="ContentDescription" />
 
         <ImageView
@@ -30,14 +31,14 @@
             android:layout_height="0dp"
             android:contentDescription="@null"
             android:src="@drawable/ic_twotone_expand_less_24px"
-            android:tint="@color/onSurface"
             app:layout_constraintBottom_toTopOf="@id/degreesTextView"
             app:layout_constraintDimensionRatio="H,1:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_percent=".10"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:tint="?attr/colorOnSurface" />
 
-        <com.elyeproj.loaderviewlibrary.LoaderTextView
+        <TextView
             android:id="@+id/degreesTextView"
             style="@style/CompassDegrees"
             android:layout_width="0dp"
@@ -50,6 +51,17 @@
             app:layout_constraintHeight_percent=".12"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/compassBackgroundImageView" />
+
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/progressIndicator"
+            style="@style/Widget.MaterialComponents.CircularProgressIndicator"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:indeterminate="true"
+            app:layout_constraintBottom_toBottomOf="@id/degreesTextView"
+            app:layout_constraintEnd_toEndOf="@id/degreesTextView"
+            app:layout_constraintStart_toStartOf="@id/degreesTextView"
+            app:layout_constraintTop_toTopOf="@id/degreesTextView" />
 
         <TextView
             android:id="@+id/accuracyTitleTextView"
@@ -71,7 +83,7 @@
             app:layout_constraintBottom_toTopOf="@id/magnetometerAccuracyLabelTextView"
             app:layout_constraintStart_toStartOf="@id/magnetometerAccuracyLabelTextView" />
 
-        <com.elyeproj.loaderviewlibrary.LoaderTextView
+        <TextView
             android:id="@+id/accelerometerAccuracyTextView"
             style="@style/CompassAttributeValue"
             android:layout_width="wrap_content"
@@ -93,7 +105,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <com.elyeproj.loaderviewlibrary.LoaderTextView
+        <TextView
             android:id="@+id/magnetometerAccuracyTextView"
             style="@style/CompassAttributeValue"
             android:layout_width="wrap_content"
@@ -115,7 +127,7 @@
             app:layout_constraintBottom_toTopOf="@id/modeTextView"
             app:layout_constraintEnd_toEndOf="@id/modeTextView" />
 
-        <com.elyeproj.loaderviewlibrary.LoaderTextView
+        <TextView
             android:id="@+id/modeTextView"
             style="@style/CompassAttributeValue"
             android:layout_width="wrap_content"
@@ -137,7 +149,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/declinationTextView" />
 
-        <com.elyeproj.loaderviewlibrary.LoaderTextView
+        <TextView
             android:id="@+id/declinationTextView"
             style="@style/CompassAttributeValue"
             android:layout_width="wrap_content"
@@ -167,12 +179,12 @@
             android:layout_marginBottom="24dp"
             android:contentDescription="@null"
             android:src="@drawable/ic_error_black_24dp"
-            android:tint="?attr/colorError"
             app:layout_constraintBottom_toTopOf="@id/missingSensorBodyTextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed" />
+            app:layout_constraintVertical_chainStyle="packed"
+            app:tint="?attr/colorError" />
 
         <TextView
             android:id="@+id/missingSensorBodyTextView"
